# hifi

./: .clang-format  CMakeLists.txt
.circleci/: config.yml
libraries/shared/: CMakeLists.txt
libraries/shared/src/: AABox.cpp  AABox.h  AACube.cpp  AACube.h  AngleUtil.h  ApplicationVersion.cpp  ApplicationVersion.h  AudioHelpers.h  AvatarConstants.h  BaseScriptEngine.cpp  BaseScriptEngine.h  BillboardMode.cpp  BillboardMode.h  BitVectorHelpers.h  BoxBase.h  BufferParser.h  ByteCountCoding.h  CPUDetect.h  CPUIdent.h  ColorUtils.cpp  ColorUtils.h  ComponentMode.h  CrashHelpers.cpp  CrashHelpers.h  CubeProjectedPolygon.cpp  CubeProjectedPolygon.h  CubicHermiteSpline.h  Debug.h  DebugDraw.cpp  DebugDraw.h  DependencyManager.cpp  DependencyManager.h  DualQuaternion.cpp  DualQuaternion.h  Extents.cpp  Extents.h  FaceshiftConstants.cpp  Finally.h  FloodFill.h  GLMHelpers.cpp  (+118 more)
libraries/shared/src/shared/: AbstractLoggerInterface.cpp  AbstractLoggerInterface.h  Bilateral.h  Camera.cpp  Camera.h  ConicalViewFrustum.cpp  ConicalViewFrustum.h  Factory.h  FileCache.cpp  FileCache.h  FileLogger.cpp  FileLogger.h  FileUtils.cpp  FileUtils.h  GlobalAppProperties.cpp  GlobalAppProperties.h  HifiTypes.h  JSONHelpers.cpp  MediaTypeLibrary.h  MiniPromises.cpp  MiniPromises.h  NetworkUtils.cpp  NsightHelpers.cpp  OnceEvery.h  QTryReadLocker.h  QTryWriteLocker.h  QtHelpers.cpp  QtHelpers.h  RateCounter.h  ReadWriteLockable.h  ScriptInitializerMixin.h  Shapes.cpp  Shapes.h  Storage.cpp  Storage.h  StringHelpers.cpp
tools/benchmarks/: CMakeLists.txt
tools/benchmarks/src/: main.cpp
(+1859 files in other folders)
